try testcontainer docker api hack

--- a/.github/workflows/mvn-dev-build-deploy.yml
+++ b/.github/workflows/mvn-dev-build-deploy.yml
@@ -67,6 +67,9 @@ jobs:
           key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-m2
 
+      - name: Testcontainers Docker api version hack
+        run: echo api.version=1.44 >> ~/.docker-java.properties
+
       - name: Maven build
         run: mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install org.jacoco:jacoco-maven-plugin:report
 
